--- a/Recursos/Elementos/Estilos.css
+++ b/Recursos/Elementos/Estilos.css
@@ -9,6 +9,7 @@
 body{
   background-color: #56192b;
 }
+
 p,h1,h2,h3,h4,h5,a,th,td,label,li{
   color: #fff0d7;
 }
@@ -18,5 +19,8 @@ table td,th {
   border: 1px solid #5ec294;
   border-spacing: 0px;
   width: 20%;
+}
+input {
+  
 }
 
