--- a/Recursos/Elementos/Estilos.css
+++ b/Recursos/Elementos/Estilos.css
@@ -10,14 +10,13 @@ body{
   background-color: #56192b;
 }
 
-p,h1,h2,h3,h4,h5,a,th,td,label,li{
+p,h1,h2,h3,h4,h5,a,th,td,label,li,thead,tbody{
   color: #fff0d7;
   list-style: none;
 }
 
 table td,th {
   text-align: center;
-  border: 1px solid #5ec294;
   border-spacing: 0px;
   width: 20%;
 }
